--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,4 +1,4 @@
-a.navbar-link::after {
+.navbar-link::after {
     content: "";
     height: 3px;
     width: 0%;
@@ -8,6 +8,6 @@ a.navbar-link::after {
     transition: all 0.5s ease-in-out;
 }
 
-a.navbar-link:hover::after {
+.navbar-link:hover::after {
     width: 100%;
 }
